<resources>
    <string name="app_name">ForkTales</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="ingredients">Ingredients</string>
    <string name="back">Back</string>
    <string name="empty_favorites">No favorite recipes…</string>
    <string name="youtube">Watch on YouTube</string>

    <string name="one_recipe">One recipe</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrong">Wrong username or password!</string>
</resources>